# numba-special

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
src/numba_special/: __init__.py  _overloads.py
src/numba_specialz/: __init__.py  _overloads.py  _special_ext.pyx
tests/: test_erfcx.py
