[project]
name = "numba-special"
version = "0.1.0"
description = "Numba-compatible bridges for scipy.special, with complex-number support"
readme = "README.md"
authors = [{ name = "krokosik", email = "krokosik@pm.me" }]
requires-python = ">=3.13"
dependencies = ["numba>=0.66.0", "scipy>=1.18.0"]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.20"]

[build-system]
requires = ["setuptools>=77", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
# Cython source is shipped; the build rebuilds the extension in place.
before-build = "pip install Cython>=3.0"
