[project]
name = "numba-specialz"
version = "0.0.1"
description = "Numba-compatible bridges for scipy.special, with complex-number support"
readme = "README.md"
authors = [{ name = "krokosik", email = "krokosik@pm.me" }]
requires-python = ">=3.12"
dependencies = ["numba>=0.60", "scipy>=1.15"]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.20"]

[build-system]
requires = ["setuptools>=77", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
numba_specialz = ["py.typed"]

[tool.cibuildwheel]
# Cython source is shipped; the build rebuilds the extension in place.
before-build = "pip install Cython>=3.0"
build = "cp312-* cp313-*"
skip = "*-musllinux *_i686 *-win32"
test-requires = "pytest"
test-command = "python -m pytest {package}/tests -q"
